--- a/index.html
+++ b/index.html
@@ -1,92 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Call Flow Diagram</title>
-    <style>
-        .network, .status {
-            margin-bottom: 20px;
-        }
-        #callFlowDiagram img {
-            max-width: 100%;
-            height: auto;
-            margin-top: 20px;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>IMS Call Flow</title>
+<style>
+  body { font-family: Arial; background: #eef2f5; }
+  svg { background: white; }
+  text { font-size: 13px; }
+</style>
 </head>
 <body>
 
-    <!-- Call Type Selection -->
-    <div class="network">
-        <h2>Call Type</h2>
-        <form>
-            <label for="network">Choose a call type:</label>
-            <select id="network" name="network">
-                <option value="Registration">Registration</option>
-                <option value="Third-party Registration">Third-party Registration</option>
-                <option value="VoLTE to VoLTE call">VoLTE to VoLTE call</option>
-                <option value="VoLTE to CS(Pure) call">VoLTE to CS(Pure) call</option>
-                <option value="CS to VoLTE call">CS to VoLTE call</option>
-            </select>
-        </form>
-    </div>
+<h2>IMS Call Flow Diagram</h2>
 
-    <!-- Call Status -->
-    <div class="status" id="callStatus">Call Flow not started</div>
+<svg width="1000" height="500">
+  <!-- Network Elements -->
+  <text x="50" y="30">UE-A</text>
+  <text x="200" y="30">P-CSCF</text>
+  <text x="350" y="30">I-CSCF</text>
+  <text x="500" y="30">S-CSCF</text>
+  <text x="650" y="30">HSS</text>
+  <text x="800" y="30">UE-B</text>
 
-    <!-- Start Call Button -->
-    <button onclick="startCall()">Start Call Flow</button>
+  <!-- Lifelines -->
+  <line x1="60" y1="40" x2="60" y2="450" stroke="gray"/>
+  <line x1="210" y1="40" x2="210" y2="450" stroke="gray"/>
+  <line x1="360" y1="40" x2="360" y2="450" stroke="gray"/>
+  <line x1="510" y1="40" x2="510" y2="450" stroke="gray"/>
+  <line x1="660" y1="40" x2="660" y2="450" stroke="gray"/>
+  <line x1="810" y1="40" x2="810" y2="450" stroke="gray"/>
 
-    <!-- Container for MSC Diagram -->
-    <div id="callFlowDiagram">
-        <!-- The diagram will be displayed here -->
-    </div>
+  <!-- Messages -->
+  <line x1="60" y1="80" x2="210" y2="80" stroke="black"/>
+  <text x="100" y="70">INVITE</text>
 
-    <script>
-        function startCall() {
-            const callStatus = document.getElementById('callStatus');
-            const callFlowDiagram = document.getElementById('callFlowDiagram');
-            const selectedCallType = document.getElementById('network').value;
+  <line x1="210" y1="120" x2="360" y2="120" stroke="black"/>
+  <text x="240" y="110">INVITE</text>
 
-            // Update call status
-            callStatus.textContent = `Call Flow started: ${selectedCallType}`;
+  <line x1="360" y1="160" x2="660" y2="160" stroke="black"/>
+  <text x="420" y="150">UAR</text>
 
-            // Clear previous diagram
-            callFlowDiagram.innerHTML = '';
+  <line x1="660" y1="200" x2="360" y2="200" stroke="black"/>
+  <text x="420" y="190">UAA</text>
 
-            // Display the correct image based on the selected call type
-            let imageUrl = '';
-            switch (selectedCallType) {
-                case 'Registration':
-                    imageUrl = 'https://github.com/cbsprabu/VoLTEcall/blob/main/IMS%20registration%20flow.png?raw=true';
-                    break;
-                case 'Third-party Registration':
-                    imageUrl = 'https://github.com/cbsprabu/VoLTEcall/blob/main/Third-Party%20Registration.png?raw=true';
-                    break;
-                case 'VoLTE to VoLTE call':
-                    imageUrl = 'URL_FOR_VOLTE_TO_VOLTE_IMAGE';
-                    break;
-                case 'VoLTE to CS(Pure) call':
-                    imageUrl = 'URL_FOR_VOLTE_TO_CS_IMAGE';
-                    break;
-                case 'CS to VoLTE call':
-                    imageUrl = 'URL_FOR_CS_TO_VOLTE_IMAGE';
-                    break;
-                default:
-                    imageUrl = '';
-            }
+  <line x1="360" y1="240" x2="510" y2="240" stroke="black"/>
+  <text x="390" y="230">INVITE</text>
 
-            if (imageUrl) {
-                const imgElement = document.createElement('img');
-                imgElement.src = imageUrl;
-                imgElement.alt = `${selectedCallType} Diagram`;
-                callFlowDiagram.appendChild(imgElement);
-            } else {
-                callFlowDiagram.innerHTML = '<p>No diagram available for this call type.</p>';
-            }
-        }
-    </script>
+  <line x1="510" y1="280" x2="810" y2="280" stroke="black"/>
+  <text x="620" y="270">INVITE</text>
+
+</svg>
 
 </body>
 </html>
+
