--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
   <text x="650" y="30">HSS</text>
   <text x="800" y="30">UE-B</text>
 
+  <defs>
+  <marker id="arrow"
+          markerWidth="10"
+          markerHeight="10"
+          refX="10"
+          refY="5"
+          orient="auto"
+          markerUnits="strokeWidth">
+    <path d="M0,0 L10,5 L0,10 Z" fill="black" />
+  </marker>
+</defs>
+
   <!-- Lifelines -->
   <line x1="60" y1="40" x2="60" y2="450" stroke="gray"/>
   <line x1="210" y1="40" x2="210" y2="450" stroke="gray"/>
@@ -31,7 +43,7 @@
   <line x1="810" y1="40" x2="810" y2="450" stroke="gray"/>
 
   <!-- Messages -->
-  <line x1="60" y1="80" x2="210" y2="80" stroke="black"/>
+  <line x1="60" y1="80" x2="210" y2="80" stroke="black" marker-end="url(#arrow)" />
   <text x="100" y="70">INVITE</text>
 
   <line x1="210" y1="120" x2="360" y2="120" stroke="black"/>
