--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
   <line x1="60" y1="80" x2="210" y2="80" stroke="black" marker-end="url(#arrow)" />
   <text x="100" y="70">INVITE</text>
 
-  <line x1="210" y1="120" x2="360" y2="120" stroke="black"/>
+  <line x1="210" y1="120" x2="360" y2="120" stroke="black" marker-end="url(#arrow)"/>
   <text x="240" y="110">INVITE</text>
 
-  <line x1="360" y1="160" x2="660" y2="160" stroke="black"/>
+  <line x1="360" y1="160" x2="660" y2="160" stroke="black" marker-end="url(#arrow)"/>
   <text x="420" y="150">UAR</text>
 
-  <line x1="660" y1="200" x2="360" y2="200" stroke="black"/>
+  <line x1="660" y1="200" x2="360" y2="200" stroke="black" marker-end="url(#arrow)"/>
   <text x="420" y="190">UAA</text>
 
-  <line x1="360" y1="240" x2="510" y2="240" stroke="black"/>
+  <line x1="360" y1="240" x2="510" y2="240" stroke="black" marker-end="url(#arrow)"/>
   <text x="390" y="230">INVITE</text>
 
   <line x1="510" y1="280" x2="810" y2="280" stroke="black"/>
