--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 <body>
 
 <h2>IMS Call Flow Diagram</h2>
+          <form>
+            <label for="network">Choose a call type:</label>
+            <select id="network" name="network">
+                <option value="Registration">Registration</option>
+                <option value="Third-party Registration">Third-party Registration</option>
+                <option value="VoLTE to VoLTE call">VoLTE to VoLTE call</option>
+                <option value="VoLTE to CS(Pure) call">VoLTE to CS(Pure) call</option>
+                <option value="CS to VoLTE call">CS to VoLTE call</option>
+            </select>
+        </form>
 
 <svg width="1000" height="500">
   <!-- Network Elements -->
