--- a/index.html
+++ b/index.html
@@ -69,12 +69,10 @@ function drawCallFlow() {
         <text x="450" y="190">UAA</text>
 
       </svg>`;
-
+ break;
       case 'OG Call':
-      
-      svg = 
+           svg = `
       <svg width="1000" height="500">
-
                 <defs>
           <marker id="arrow" markerWidth="10" markerHeight="10"
                   refX="10" refY="5" orient="auto">
