--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 <title>IMS Call Flow</title>
 <style>
   body { font-family: Arial; background: #eef2f5; }
-  svg { background: white; }
+  svg { background: white; border: 1px solid #ccc; }
   text { font-size: 13px; }
 </style>
 </head>
 <body>
 
 <h2>IMS Call Flow Diagram</h2>
+
 <select id="callType" onchange="drawCallFlow()">
   <option value="">Select Call Type</option>
   <option value="Registration">IMS Registration</option>
@@ -19,6 +20,7 @@
 </select>
 
 <div id="diagram"></div>
+
 <script>
 function drawCallFlow() {
   const selectedCallType = document.getElementById("callType").value;
@@ -26,10 +28,10 @@ function drawCallFlow() {
 
   switch (selectedCallType) {
 
+    /* ================= IMS REGISTRATION ================= */
     case 'Registration':
       svg = `
       <svg width="1000" height="500">
-
         <defs>
           <marker id="arrow" markerWidth="10" markerHeight="10"
                   refX="10" refY="5" orient="auto">
@@ -54,69 +56,74 @@ function drawCallFlow() {
         <!-- Messages -->
         <line x1="60" y1="80" x2="210" y2="80"
               stroke="black" marker-end="url(#arrow)"/>
-        <text x="100" y="70">REGISTER</text>
+        <text x="110" y="70">REGISTER</text>
 
         <line x1="210" y1="120" x2="360" y2="120"
               stroke="black" marker-end="url(#arrow)"/>
-        <text x="240" y="110">REGISTER</text>
+        <text x="250" y="110">REGISTER</text>
 
         <line x1="360" y1="160" x2="660" y2="160"
               stroke="black" marker-end="url(#arrow)"/>
-        <text x="450" y="150">UAR</text>
+        <text x="470" y="150">UAR</text>
 
         <line x1="660" y1="200" x2="360" y2="200"
-              stroke="black" marker-start="url(#arrow)"/>
-        <text x="450" y="190">UAA</text>
-
+              stroke="black" marker-end="url(#arrow)"/>
+        <text x="470" y="190">UAA</text>
       </svg>`;
- break;
-      case 'OG Call':
-           svg = `
+      break;
+
+    /* ================= IMS OG CALL ================= */
+    case 'OG Call':
+      svg = `
       <svg width="1000" height="500">
-                <defs>
+        <defs>
           <marker id="arrow" markerWidth="10" markerHeight="10"
                   refX="10" refY="5" orient="auto">
             <path d="M0,0 L10,5 L0,10 Z" fill="black"/>
           </marker>
         </defs>
-  <!-- Network Elements -->
-  <text x="50" y="30">UE-A</text>
-  <text x="200" y="30">P-CSCF</text>
-  <text x="350" y="30">I-CSCF</text>
-  <text x="500" y="30">S-CSCF</text>
-  <text x="650" y="30">HSS</text>
-  <text x="800" y="30">UE-B</text>
 
-  <!-- Lifelines -->
-  <line x1="60" y1="40" x2="60" y2="450" stroke="gray"/>
-  <line x1="210" y1="40" x2="210" y2="450" stroke="gray"/>
-  <line x1="360" y1="40" x2="360" y2="450" stroke="gray"/>
-  <line x1="510" y1="40" x2="510" y2="450" stroke="gray"/>
-  <line x1="660" y1="40" x2="660" y2="450" stroke="gray"/>
-  <line x1="810" y1="40" x2="810" y2="450" stroke="gray"/>
+        <!-- Network Elements -->
+        <text x="50" y="30">UE-A</text>
+        <text x="200" y="30">P-CSCF</text>
+        <text x="350" y="30">I-CSCF</text>
+        <text x="500" y="30">S-CSCF</text>
+        <text x="650" y="30">HSS</text>
+        <text x="800" y="30">UE-B</text>
 
-  <!-- Messages -->
-  <line x1="60" y1="80" x2="210" y2="80" stroke="black"/>
-  <text x="100" y="70">INVITE</text>
+        <!-- Lifelines -->
+        <line x1="60" y1="40" x2="60" y2="450" stroke="gray"/>
+        <line x1="210" y1="40" x2="210" y2="450" stroke="gray"/>
+        <line x1="360" y1="40" x2="360" y2="450" stroke="gray"/>
+        <line x1="510" y1="40" x2="510" y2="450" stroke="gray"/>
+        <line x1="660" y1="40" x2="660" y2="450" stroke="gray"/>
+        <line x1="810" y1="40" x2="810" y2="450" stroke="gray"/>
 
-  <line x1="210" y1="120" x2="360" y2="120" stroke="black"/>
-  <text x="240" y="110">INVITE</text>
+        <!-- Messages -->
+        <line x1="60" y1="80" x2="210" y2="80"
+              stroke="black" marker-end="url(#arrow)"/>
+        <text x="110" y="70">INVITE</text>
 
-  <line x1="360" y1="160" x2="660" y2="160" stroke="black"/>
-  <text x="420" y="150">UAR</text>
+        <line x1="210" y1="120" x2="360" y2="120"
+              stroke="black" marker-end="url(#arrow)"/>
+        <text x="250" y="110">INVITE</text>
 
-  <line x1="660" y1="200" x2="360" y2="200" stroke="black"/>
-  <text x="420" y="190">UAA</text>
+        <line x1="360" y1="160" x2="660" y2="160"
+              stroke="black" marker-end="url(#arrow)"/>
+        <text x="470" y="150">UAR</text>
 
-  <line x1="360" y1="240" x2="510" y2="240" stroke="black"/>
-  <text x="390" y="230">INVITE</text>
+        <line x1="660" y1="200" x2="360" y2="200"
+              stroke="black" marker-end="url(#arrow)"/>
+        <text x="470" y="190">UAA</text>
 
-  <line x1="510" y1="280" x2="810" y2="280" stroke="black"/>
-  <text x="620" y="270">INVITE</text>
+        <line x1="360" y1="240" x2="510" y2="240"
+              stroke="black" marker-end="url(#arrow)"/>
+        <text x="400" y="230">INVITE</text>
 
-</svg>
-
-      
+        <line x1="510" y1="280" x2="810" y2="280"
+              stroke="black" marker-end="url(#arrow)"/>
+        <text x="630" y="270">INVITE</text>
+      </svg>`;
       break;
 
     default:
@@ -126,6 +133,6 @@ function drawCallFlow() {
   document.getElementById("diagram").innerHTML = svg;
 }
 </script>
+
 </body>
 </html>
-
