--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@ function drawCallFlow() {
         <line x1="660" y1="200" x2="360" y2="200"
               stroke="black" marker-end="url(#arrow)"/>
         <text x="470" y="190">UAA(User Authorization Answer)
-        Result= DIAMETER_FIRST_REGISTRAION
+       /n Result= DIAMETER_FIRST_REGISTRAION
         </text>
 
         <line x1="360" y1="240" x2="510" y2="240"
               stroke="black" marker-end="url(#arrow)"/>
-        <text x="250" y="110">REGISTER</text>
+        <text x="520" y="230">REGISTER</text>
       </svg>`;
       break;
 
