--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@ function drawCallFlow() {
   <line x1="210" y1="120" x2="360" y2="120" stroke="black" marker-end="url(#arrow)"/>
   <text x="225" y="105">
     <tspan x="225" dy="2">REGISTER</tspan>
-    <tspan x="225" dy="25">IMPU, IMPI</tspan>
-    <tspan x="225" dy="25">Security Params</tspan>
-  </text>
+    <tspan x="225" dy="25">IMPU, IMPI, Security Params</tspan>
+    </text>
 
   <!-- UAR / UAA -->
   <line x1="360" y1="170" x2="660" y2="170" stroke="black" marker-end="url(#arrow)"/>
