--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ function drawCallFlow() {
  
     /* ================= IMS REGISTRATION ================= */
     case 'Registration':
+      svg =
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:ev="http://www.w3.org/2001/xml-events"
         xmlns:v="http://schemas.microsoft.com/visio/2003/SVGExtensions/" width="6.88976in" height="8.26772in"
         viewBox="0 0 496.063 595.276" xml:space="preserve" color-interpolation-filters="sRGB" class="st21">
