--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ function drawCallFlow() {
     case 'Registration':
       svg = `
 <svg xmlns="http://www.w3.org/2000/svg"
+     xmlns:xlink="http://www.w3.org/1999/xlink"
      width="1000" height="1200"
      viewBox="0 0 496.063 595.276">
 <style type="text/css">
