--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <meta charset="UTF-8">
 <title>IMS Call Flow</title>
 <style>
-  body { font-family: Arial; background: #eef2f5; }
-  svg { background: white; border: 1px solid #ccc; }
-  text { font-size: 13px; }
+/* === AUTO-CONVERT VISIO MARKERS TO marker-end === */
+.st2, .st9, .st14, .st17, .st19, .st20 {
+  marker-start: none !important;
+  marker-end: url(#mrkr13-6) !important;
+}
+
+/* double-ended arrows → single direction */
+.st12 {
+  marker-start: none !important;
+  marker-end: url(#mrkr13-166) !important;
+}
 </style>
-</head>
-<body>
+
  
 <h2>IMS Call Flow Diagram</h2>
  
