--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           { from: 3, to: 4, label: "SAR", details: { Protocol: "DIAMETER", ImportantToSee: "IMPU, Auth-Scheme, Servername" } },
           { from: 4, to: 3, label: "SAA", details: { Protocol: "DIAMETER", ImportantToSee: "IMPU, IFC" } },
           { from: 3, to: 1, label: "200 OK", details: { Protocol: "SIP", ImportantToSee: "Successful Registration" } },
-          { from: 1, to: 0, label: "200 OK", details: { Protocol: "SIP", ImportantToSee: "Successful Registration" } }
+          { from: 1, to: 0, label: "200 OK", details: { Protocol: "SIP", ImportantToSee: "Successful Registration" } },
           
         ]
       },
