--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 </head>
 <body>
   <header>
-    <h1>IMS Call Flow Simulator</h1>
+    <h1>IMS Call Flow </h1>
     <p>Interactive 3D sequence diagram</p>
   </header>
 
